Stop squishing photos that are not in the header and list both domains

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,15 +43,17 @@ nav img {
 /*
  Main area
 */
-main img {
-  margin: auto;
-  width: 100%;
-  max-height: 50vh;
-}
 .section-title {
   text-align: center;
   margin-top: 5rem;
   font-size: calc(2rem + 2vw);
+}
+.section-title img {
+  max-height: 50vh;
+}
+main img {
+  margin: auto;
+  width: 100%;
 }
 
 .section-body {
